RiverPatch: update defconfig

--- a/arch/x86/configs/chromeos_defconfig
+++ b/arch/x86/configs/chromeos_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.10.37 Kernel Configuration
+# Linux/x86 5.10.45 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Debian clang version 11.0.1-2"
 CONFIG_GCC_VERSION=0
@@ -107,6 +107,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPTION=y
+CONFIG_SCHED_CORE=y
 
 #
 # CPU/Task time and stats accounting
@@ -776,6 +777,7 @@ CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_MOVE_PMD=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE_PUD=y
+CONFIG_HAVE_ARCH_PARENT_PMD_YOUNG=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_HAVE_ARCH_SOFT_DIRTY=y
@@ -1641,6 +1643,7 @@ CONFIG_BT_DEBUGFS=y
 # CONFIG_BT_SELFTEST is not set
 CONFIG_BT_FEATURE_DEBUG=y
 # CONFIG_BT_FEATURE_DEBUG_FUNC_NAMES is not set
+# CONFIG_BT_FEATURE_QUALITY_REPORT is not set
 
 #
 # Bluetooth device drivers
@@ -4389,6 +4392,7 @@ CONFIG_MFD_INTEL_LPSS_ACPI=m
 CONFIG_MFD_INTEL_LPSS_PCI=m
 CONFIG_MFD_INTEL_MSIC=y
 CONFIG_MFD_INTEL_PMC_BXT=y
+# CONFIG_MFD_INTEL_PMT is not set
 CONFIG_MFD_IQS62X=m
 CONFIG_MFD_JANZ_CMODIO=m
 CONFIG_MFD_KEMPLD=m
@@ -8272,6 +8276,7 @@ CONFIG_SECURITY_YAMA=y
 CONFIG_SECURITY_SAFESETID=y
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
 CONFIG_SECURITY_CHROMIUMOS=y
+CONFIG_SECURITY_CHROMIUMOS_NO_SYMLINK_MOUNT=y
 # CONFIG_SECURITY_CHROMIUMOS_NO_UNPRIVILEGED_UNSAFE_MOUNTS is not set
 CONFIG_ALT_SYSCALL_CHROMIUMOS=y
 # CONFIG_SECURITY_CHROMIUMOS_READONLY_PROC_SELF_MEM is not set
