--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -548,7 +548,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
@@ -3296,9 +3296,9 @@ CONFIG_ARM_SP805_WATCHDOG=y
 # CONFIG_CADENCE_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
-CONFIG_QCOM_WDT=m
+# CONFIG_QCOM_WDT is not set
 # CONFIG_ARM_SMC_WATCHDOG is not set
-# CONFIG_PM8916_WATCHDOG is not set
+CONFIG_PM8916_WATCHDOG=y
 # CONFIG_ALIM7101_WDT is not set
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_MEN_A21_WDT is not set
@@ -3898,7 +3898,7 @@ CONFIG_MEDIA_TUNER_MC44S803=m
 # Graphics support
 #
 CONFIG_VGA_ARB=y
-CONFIG_VGA_ARB_MAX_GPUS=16
+CONFIG_VGA_ARB_MAX_GPUS=2
 CONFIG_DRM=y
 CONFIG_DRM_MIPI_DSI=y
 # CONFIG_DRM_DP_AUX_CHARDEV is not set
@@ -4148,8 +4148,8 @@ CONFIG_FB_SIMPLE=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_KTD253 is not set
-CONFIG_BACKLIGHT_PWM=m
-CONFIG_BACKLIGHT_QCOM_WLED=m
+CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_QCOM_WLED=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
 # CONFIG_BACKLIGHT_LM3630A is not set
@@ -4879,10 +4879,10 @@ CONFIG_U_SERIAL_CONSOLE=y
 CONFIG_USB_SNP_CORE=y
 CONFIG_USB_SNP_UDC_PLAT=y
 # CONFIG_USB_M66592 is not set
-CONFIG_USB_BDC_UDC=y
+# CONFIG_USB_BDC_UDC is not set
 # CONFIG_USB_AMD5536UDC is not set
 # CONFIG_USB_NET2272 is not set
-CONFIG_USB_NET2280=y
+# CONFIG_USB_NET2280 is not set
 # CONFIG_USB_GOKU is not set
 # CONFIG_USB_EG20T is not set
 # CONFIG_USB_GADGET_XILINX is not set
@@ -4958,7 +4958,7 @@ CONFIG_TYPEC_TCPCI=y
 # CONFIG_TYPEC_HD3SS3220 is not set
 # CONFIG_TYPEC_TPS6598X is not set
 # CONFIG_TYPEC_STUSB160X is not set
-CONFIG_TYPEC_QCOM_PMIC=m
+CONFIG_TYPEC_QCOM_PMIC=y
 
 #
 # USB Type-C Multiplexer/DeMultiplexer Switch support
@@ -6964,10 +6964,10 @@ CONFIG_DEBUG_BUGVERBOSE=y
 #
 # CONFIG_DEBUG_INFO is not set
 CONFIG_FRAME_WARN=2048
-# CONFIG_STRIP_ASM_SYMS is not set
+CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_READABLE_ASM is not set
 # CONFIG_HEADERS_INSTALL is not set
-# CONFIG_DEBUG_SECTION_MISMATCH is not set
+CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
@@ -7141,45 +7141,7 @@ CONFIG_STRICT_DEVMEM=y
 CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
-CONFIG_RUNTIME_TESTING_MENU=y
-# CONFIG_LKDTM is not set
-# CONFIG_TEST_LIST_SORT is not set
-# CONFIG_TEST_MIN_HEAP is not set
-# CONFIG_TEST_SORT is not set
-# CONFIG_BACKTRACE_SELF_TEST is not set
-# CONFIG_RBTREE_TEST is not set
-# CONFIG_REED_SOLOMON_TEST is not set
-# CONFIG_INTERVAL_TREE_TEST is not set
-# CONFIG_PERCPU_TEST is not set
-# CONFIG_ATOMIC64_SELFTEST is not set
-# CONFIG_TEST_HEXDUMP is not set
-# CONFIG_TEST_STRING_HELPERS is not set
-# CONFIG_TEST_STRSCPY is not set
-# CONFIG_TEST_KSTRTOX is not set
-# CONFIG_TEST_PRINTF is not set
-# CONFIG_TEST_BITMAP is not set
-# CONFIG_TEST_UUID is not set
-# CONFIG_TEST_XARRAY is not set
-# CONFIG_TEST_OVERFLOW is not set
-# CONFIG_TEST_RHASHTABLE is not set
-# CONFIG_TEST_HASH is not set
-# CONFIG_TEST_IDA is not set
-# CONFIG_TEST_LKM is not set
-# CONFIG_TEST_BITOPS is not set
-# CONFIG_TEST_VMALLOC is not set
-# CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
-# CONFIG_TEST_BLACKHOLE_DEV is not set
-# CONFIG_FIND_BIT_BENCHMARK is not set
-# CONFIG_TEST_FIRMWARE is not set
-# CONFIG_TEST_SYSCTL is not set
-# CONFIG_TEST_UDELAY is not set
-# CONFIG_TEST_STATIC_KEYS is not set
-# CONFIG_TEST_KMOD is not set
-# CONFIG_TEST_MEMCAT_P is not set
-# CONFIG_TEST_STACKINIT is not set
-# CONFIG_TEST_MEMINIT is not set
-# CONFIG_TEST_FREE_PAGES is not set
-CONFIG_MEMTEST=y
+# CONFIG_RUNTIME_TESTING_MENU is not set
+# CONFIG_MEMTEST is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
