--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -4745,7 +4745,7 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_CDNS_SUPPORT is not set
 # CONFIG_USB_MUSB_HDRC is not set
 CONFIG_USB_DWC3=y
-# CONFIG_USB_DWC3_ULPI is not set
+CONFIG_USB_DWC3_ULPI=y
 # CONFIG_USB_DWC3_HOST is not set
 # CONFIG_USB_DWC3_GADGET is not set
 CONFIG_USB_DWC3_DUAL_ROLE=y
@@ -4753,11 +4753,21 @@ CONFIG_USB_DWC3_DUAL_ROLE=y
 #
 # Platform Glue Driver Support
 #
-CONFIG_USB_DWC3_PCI=y
-CONFIG_USB_DWC3_HAPS=y
+# CONFIG_USB_DWC3_PCI is not set
+# CONFIG_USB_DWC3_HAPS is not set
 CONFIG_USB_DWC3_OF_SIMPLE=y
 CONFIG_USB_DWC3_QCOM=y
-# CONFIG_USB_DWC2 is not set
+CONFIG_USB_DWC2=y
+# CONFIG_USB_DWC2_HOST is not set
+
+#
+# Gadget/Dual-role mode requires USB Gadget support to be enabled
+#
+# CONFIG_USB_DWC2_PERIPHERAL is not set
+CONFIG_USB_DWC2_DUAL_ROLE=y
+# CONFIG_USB_DWC2_PCI is not set
+# CONFIG_USB_DWC2_DEBUG is not set
+# CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
 # CONFIG_USB_CHIPIDEA is not set
 # CONFIG_USB_ISP1760 is not set
 
@@ -4876,8 +4886,8 @@ CONFIG_U_SERIAL_CONSOLE=y
 # CONFIG_USB_PXA27X is not set
 # CONFIG_USB_MV_UDC is not set
 # CONFIG_USB_MV_U3D is not set
-CONFIG_USB_SNP_CORE=y
-CONFIG_USB_SNP_UDC_PLAT=y
+CONFIG_USB_SNP_CORE=m
+CONFIG_USB_SNP_UDC_PLAT=m
 # CONFIG_USB_M66592 is not set
 # CONFIG_USB_BDC_UDC is not set
 # CONFIG_USB_AMD5536UDC is not set
@@ -4949,8 +4959,8 @@ CONFIG_USB_ETH_RNDIS=y
 # end of USB Gadget precomposed configurations
 
 CONFIG_TYPEC=y
-CONFIG_TYPEC_TCPM=y
-CONFIG_TYPEC_TCPCI=y
+CONFIG_TYPEC_TCPM=m
+CONFIG_TYPEC_TCPCI=m
 # CONFIG_TYPEC_RT1711H is not set
 # CONFIG_TYPEC_TCPCI_MAXIM is not set
 # CONFIG_TYPEC_FUSB302 is not set
@@ -4958,7 +4968,7 @@ CONFIG_TYPEC_TCPCI=y
 # CONFIG_TYPEC_HD3SS3220 is not set
 # CONFIG_TYPEC_TPS6598X is not set
 # CONFIG_TYPEC_STUSB160X is not set
-CONFIG_TYPEC_QCOM_PMIC=y
+CONFIG_TYPEC_QCOM_PMIC=m
 
 #
 # USB Type-C Multiplexer/DeMultiplexer Switch support
@@ -6225,6 +6235,7 @@ CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
 # CONFIG_PHY_QCOM_USB_HS_28NM is not set
 # CONFIG_PHY_QCOM_USB_SS is not set
 # CONFIG_PHY_QCOM_IPQ806X_USB is not set
+# CONFIG_PHY_SAMSUNG_USB2 is not set
 # CONFIG_PHY_TUSB1210 is not set
 # end of PHY Subsystem
 
